--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,7 +11,7 @@
         <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control" %>
       </div>
 
-      <div class="ield form-group">
+      <div class="field form-group">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
