--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -13,7 +13,7 @@
       </li>
       <li class="nav-item">
       <% if user_signed_in? %>
-        <%= link_to 'Create Posts', new_post_path, class:"nav-link" %>
+        <%= link_to 'Create Post', new_post_path, class:"nav-link" %>
       <%end%>
       </li>
       <li class="nav-item dropdown">
