--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.landscape {
+    height: 300px;
+    width: 800px;
+}
