--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,19 +9,18 @@
         </div>
         <div class="card-body">
             <div>
-                <img src="<%= URI.parse(post.photo) %>" alt=" " style='height: 90%, width: 90%, object-fit: contain'>
+                <img src="<%= URI.parse(post.photo) %>" alt=" ">
             </div>
             <br/>
             <%= post.description %>
         </div>
         <div class="card-footer">
-            <%= link_to 'Show', post %> |
-            <% if post.user == current_user %>
+            <% if post.user == current_user || current_user.id == 1%>
+                <%= link_to 'Show', post %> |
                 <%= link_to 'Edit', edit_post_path(post) %> |
                 <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
             <% else %>
-                <td></td>
-                <td></td>
+                <%= link_to 'Show', post %>
             <% end %>
         </div>        
     </div>
