--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -16,31 +16,28 @@
         <%= link_to 'Create Post', new_post_path, class:"nav-link" %>
       <%end%>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Account
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <% if user_signed_in? %>
-            <a class="dropdown-item">
-            <%= link_to 'Edit profile', edit_user_registration_path, class:"dropdown-item" %>
-            </a>
-            <a class="dropdown-item">
-              <%= link_to 'Sign out', destroy_user_session_path,method: :delete, class:"dropdown-item" %>
-            </a>
-          <%else%>  
-            <a class="dropdown-item">
-              <%= link_to 'Sign in', new_user_session_path, class:"dropdown-item" %>
-            </a>
-            <a class="dropdown-item">
-              <%= link_to 'Sign up', new_user_registration_path, class:"dropdown-item" %>
-            </a>
-          <%end%>
-          </div>
-        
-      </li>
-      <li class="nav-item">
+      <li class="nav-item" >
         <%= link_to 'About', home_about_path, class:"nav-link" %>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+            <%= link_to 'Edit profile', edit_user_registration_path, class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign out', destroy_user_session_path,method: :delete, class:"nav-link" %>
+            </li>
+          <%else%>  
+            <li class="nav-item">
+              <%= link_to 'Sign in', new_user_session_path, class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign up', new_user_registration_path, class:"nav-link" %>
+            </li>
+          <%end%>
+        </div>
       </li>
     </ul>
   </div>
