--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <%= link_to 'Shreddit', root_path, class:"navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,22 +22,21 @@
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-          <% if user_signed_in? %>
-            <li class="nav-item">
-            <%= link_to 'Edit profile', edit_user_registration_path, class:"nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign out', destroy_user_session_path,method: :delete, class:"nav-link" %>
-            </li>
-          <%else%>  
-            <li class="nav-item">
-              <%= link_to 'Sign in', new_user_session_path, class:"nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Sign up', new_user_registration_path, class:"nav-link" %>
-            </li>
-          <%end%>
-        </div>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+          <%= link_to 'Edit profile', edit_user_registration_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign out', destroy_user_session_path,method: :delete, class:"nav-link" %>
+          </li>
+        <%else%>  
+          <li class="nav-item">
+            <%= link_to 'Sign in', new_user_session_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign up', new_user_registration_path, class:"nav-link" %>
+          </li>
+        <%end%>
       </li>
     </ul>
   </div>
