Tidy up + notation added to code

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
     <% if post.user == current_user %>
         <div class="card">
             <div class="card-header">
-                <h4><%= post.title %> </h4> <p>User ID: <%=post.user.id%></p>
+                <h4><%= post.title %> </h4> <p>User: <%=post.user.username%></p>
             </div>
             <div class="card-body">
                 <div>
