--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,5 +4,4 @@
 
 <h1>New Post</h1>
 
-<%= render 'form', post: @post %>
-
+<%= render 'form', post: @post %>   <!--This instance variable is defined in the controller in the 'new' defintion-->
