--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field form-group">
     <% form.label :user_id %>
-    <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value: current_user.id, type: "hidden" %>
+    <%= form.number_field :user_id, id: :post_user_id, class:"form-control", value: current_user.id, type: "hidden" %>
   </div>
 
   <br/>
