--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header">
-        <h4><%= @post.title %> </h4> <p>User ID: <%=@post.user.id%></p>
+        <h4><%= @post.title %> </h4> <p>User: <%=@post.user.username%></p>
     </div>
     <div class="card-body">
         <img src="<%= URI.parse(@post.photo) %>" alt=" ">
@@ -16,5 +16,5 @@
   <%= link_to 'Edit', edit_post_path(@post), class:"btn btn-primary"  %> |
   <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
 <%else%>
-  <%= link_to 'Back', root_path, class:"btn btn-primary" %> |
+  <%= link_to 'Back', root_path, class:"btn btn-primary" %>
 <%end%>
