--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <% @posts.reverse.each do |post| %>
     <div class="card">
         <div class="card-header">
-            <h4><%= post.title %> </h4> <p>User: <%=post.user.username%><p>
+            <h4><%= post.title %> </h4> <p>User: <%=post.user.id%><p>
         </div>
         <div class="card-body">
             <div>
