--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,12 +15,16 @@
             <%= post.description %>
         </div>
         <div class="card-footer">
-            <% if post.user == current_user || current_user.id == 1%>
-                <%= link_to 'Show', post %> |
-                <%= link_to 'Edit', edit_post_path(post) %> |
-                <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <% if user_signed_in? %>
+                <% if post.user == current_user || current_user.id == 1%>
+                    <%= link_to 'Show', post %> |
+                    <%= link_to 'Edit', edit_post_path(post) %> |
+                    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+                <% else %>
+                    <%= link_to 'Show', post %>
+                <% end %>
             <% else %>
-                <%= link_to 'Show', post %>
+                    <%= link_to 'Show', post %>
             <% end %>
         </div>        
     </div>
